# custom-PIM-architecture-translator-using-LLVM

./: .gitignore  CMakeLists.txt  README.md  algorithm.txt
Dataset/: matrix_mul.cpp  test_cases.csv
Output/: isa_output.txt
Source_Code/: MatrixAnalysisPass.cpp  MatrixAnalysisPass.h  PIMCodeGen.cpp  PIMCodeGen.h  main.cpp
docs/: CompilerathonSubmission.md
examples/: CMakeLists.txt  matrix_mult.cpp  matrix_multiplication.cpp
include/: matrix.h  pim_isa.h
output/: matrix_multiplication.isa  matrix_multiplication.ll
results/: ThreeAddressCode.txt
src/: CMakeLists.txt  instruction_generator.cpp  instruction_generator.h  instruction_generator_algorithm.txt  ir_parser.cpp  ir_parser.h  loop_analyzer.cpp  loop_analyzer_algorithm.txt  main.cpp  memory_mapper_algorithm.txt  parallel_loop_analyzer.cpp  parallel_loop_analyzer.h  pim_memory_mapper.cpp  pim_memory_mapper.h
src/backend/: isa_generator.cpp
src/examples/: matrix_mul.cpp
src/frontend/: parser.cpp
src/middle/: llvm_generator.cpp
